Version 1.0.6
✔ Added Snippets
  - `znuny.LayoutObject.AddPopupProfiles.code-snippets`
  - `znuny.MentionObject.RemoveAllMentions.code-snippets`

✔ Updated Snippets
  - `znuny.ActivityObject.DataAdd.sublime-snippet
  - `znuny.ActivityObject.DataGet.sublime-snippet
  - `znuny.ActivityObject.DataListGet.sublime-snippet
  - `znuny.ActivityObject.DataSearch.sublime-snippet
  - `znuny.CSVObject.CSV2Array.sublime-snippet
  - `znuny.CacheObject.Get.sublime-snippet
  - `znuny.CalendarObject.CalendarCreate.sublime-snippet
  - `znuny.CalendarObject.CalendarImport.sublime-snippet
  - `znuny.CalendarObject.CalendarUpdate.sublime-snippet
  - `znuny.CalendarObject.TicketAppointmentDelete.sublime-snippet
  - `znuny.CheckItemObject.StringClean.sublime-snippet
  - `znuny.CustomerUserObject.CustomerUserAdd.sublime-snippet
  - `znuny.CustomerUserObject.CustomerUserUpdate.sublime-snippet
  - `znuny.CustomerUserObject.SetPassword.sublime-snippet
  - `znuny.DynamicFieldObject.ObjectMappingGet.sublime-snippet
  - `znuny.DynamicFieldValueObject.AllValuesDelete.sublime-snippet
  - `znuny.DynamicFieldValueObject.ValueDelete.sublime-snippet
  - `znuny.DynamicFieldValueObject.ValueGet.sublime-snippet
  - `znuny.DynamicFieldValueObject.ValueSearch.sublime-snippet
  - `znuny.DynamicFieldValueObject.ValueSet.sublime-snippet
  - `znuny.DynamicFieldValueObject.ValueValidate.sublime-snippet
  - `znuny.EmailObject.Send.sublime-snippet
  - `znuny.FormDraftObject.FormDraftDelete.sublime-snippet
  - `znuny.FormDraftObject.FormDraftGet.sublime-snippet
  - `znuny.GenericAgentObject.JobRun.sublime-snippet
  - `znuny.JSONObject.Encode.sublime-snippet
  - `znuny.JWTObject.Encode.sublime-snippet
  - `znuny.LinkObject.LinkCleanup.sublime-snippet
  - `znuny.LinkObject.LinkListWithData.sublime-snippet
  - `znuny.LinkObject.ObjectDescriptionGet.sublime-snippet
  - `znuny.LinkObject.ObjectPermission.sublime-snippet
  - `znuny.LogObject.GetLogEntry.sublime-snippet