@@ -1,4 +1,4 @@
 {
   "install": "messages/install.txt",
-  "1.0.5": "messages/version.txt"
+  "1.0.6": "messages/version.txt"
 }
