@@ -3,6 +3,99 @@
 ✔ Added Snippets
   - `znuny.LayoutObject.AddPopupProfiles.code-snippets`
   - `znuny.MentionObject.RemoveAllMentions.code-snippets`
+  - `znuny.SessionObject.GetOrphanedSessionIDs.code-snippets`
+
+✔ Updated Snippets
+  - `znuny.ActivityObject.DataAdd.sublime-snippet
+  - `znuny.ActivityObject.DataGet.sublime-snippet
+  - `znuny.ActivityObject.DataListGet.sublime-snippet
+  - `znuny.ActivityObject.DataSearch.sublime-snippet
+  - `znuny.CSVObject.CSV2Array.sublime-snippet
+  - `znuny.CacheObject.Get.sublime-snippet
+  - `znuny.CalendarObject.CalendarCreate.sublime-snippet
+  - `znuny.CalendarObject.CalendarImport.sublime-snippet
+  - `znuny.CalendarObject.CalendarUpdate.sublime-snippet
+  - `znuny.CalendarObject.TicketAppointmentDelete.sublime-snippet
+  - `znuny.CheckItemObject.StringClean.sublime-snippet
+  - `znuny.CustomerUserObject.CustomerUserAdd.sublime-snippet
+  - `znuny.CustomerUserObject.CustomerUserUpdate.sublime-snippet
+  - `znuny.CustomerUserObject.SetPassword.sublime-snippet
+  - `znuny.DynamicFieldObject.ObjectMappingGet.sublime-snippet
+  - `znuny.DynamicFieldValueObject.AllValuesDelete.sublime-snippet
+  - `znuny.DynamicFieldValueObject.ValueDelete.sublime-snippet
+  - `znuny.DynamicFieldValueObject.ValueGet.sublime-snippet
+  - `znuny.DynamicFieldValueObject.ValueSearch.sublime-snippet
+  - `znuny.DynamicFieldValueObject.ValueSet.sublime-snippet
+  - `znuny.DynamicFieldValueObject.ValueValidate.sublime-snippet
+  - `znuny.EmailObject.Send.sublime-snippet
+  - `znuny.FormDraftObject.FormDraftDelete.sublime-snippet
+  - `znuny.FormDraftObject.FormDraftGet.sublime-snippet
+  - `znuny.GenericAgentObject.JobRun.sublime-snippet
+  - `znuny.JSONObject.Encode.sublime-snippet
+  - `znuny.JWTObject.Encode.sublime-snippet
+  - `znuny.LinkObject.LinkCleanup.sublime-snippet
+  - `znuny.LinkObject.LinkListWithData.sublime-snippet
+  - `znuny.LinkObject.ObjectDescriptionGet.sublime-snippet
+  - `znuny.LinkObject.ObjectPermission.sublime-snippet
+  - `znuny.LogObject.GetLogEntry.sublime-snippet
+  - `znuny.MailAccountObject.MailAccountCheck.sublime-snippet
+  - `znuny.MailAccountObject.MailAccountFetch.sublime-snippet
+  - `znuny.MailAccountObject.MailAccountUpdate.sublime-snippet
+  - `znuny.MailQueueObject.Create.sublime-snippet
+  - `znuny.MailQueueObject.Delete.sublime-snippet
+  - `znuny.MailQueueObject.Get.sublime-snippet
+  - `znuny.MailQueueObject.List.sublime-snippet
+  - `znuny.MailQueueObject.Send.sublime-snippet
+  - `znuny.MainObject.Dump.sublime-snippet
+  - `znuny.MainObject.FileDelete.sublime-snippet
+  - `znuny.MainObject.FileGetMTime.sublime-snippet
+  - `znuny.MainObject.FilenameCleanUp.sublime-snippet
+  - `znuny.MentionObject.GetTicketMentions.sublime-snippet
+  - `znuny.MentionObject.GetUserMentions.sublime-snippet
+  - `znuny.NotificationEventObject.NotificationImport.sublime-snippet
+  - `znuny.PIDObject.PIDCreate.sublime-snippet
+  - `znuny.PIDObject.PIDUpdate.sublime-snippet
+  - `znuny.PackageObject.AnalyzePackageFrameworkRequirements.sublime-snippet
+  - `znuny.PackageObject.DeployCheck.sublime-snippet
+  - `znuny.PackageObject.PackageFileGetMD5Sum.sublime-snippet
+  - `znuny.PackageObject.PackageInstall.sublime-snippet
+  - `znuny.PackageObject.RepositoryAdd.sublime-snippet
+  - `znuny.PackageObject.RepositoryPackageListGet.sublime-snippet
+  - `znuny.QueueObject.NameExistsCheck.sublime-snippet
+  - `znuny.QueueObject.QueueGet.sublime-snippet
+  - `znuny.SLAObject.SLAUpdate.sublime-snippet
+  - `znuny.ServiceObject.ServiceAdd.sublime-snippet
+  - `znuny.ServiceObject.ServiceUpdate.sublime-snippet
+  - `znuny.StandardTemplateObject.NameExistsCheck.sublime-snippet
+  - `znuny.StateObject.StateGetStatesByType.sublime-snippet
+  - `znuny.StatsObject.Export.sublime-snippet
+  - `znuny.StatsObject.GetStaticFiles.sublime-snippet
+  - `znuny.StatsObject.GetStatsList.sublime-snippet
+  - `znuny.StatsObject.StatsCleanUp.sublime-snippet
+  - `znuny.StatsObject.StatsInstall.sublime-snippet
+  - `znuny.StatsObject.StatsListGet.sublime-snippet
+  - `znuny.StatsObject.StatsResultCacheCompute.sublime-snippet
+  - `znuny.StatsObject.StatsResultCacheGet.sublime-snippet
+  - `znuny.StatsObject.StatsRun.sublime-snippet
+  - `znuny.StatsObject.StatsUninstall.sublime-snippet
+  - `znuny.StatsObject.StringAndTimestamp2Filename.sublime-snippet
+  - `znuny.StdAttachmentObject.StdAttachmentList.sublime-snippet
+  - `znuny.SupportDataCollectorObject.Collect.sublime-snippet
+  - `znuny.SysConfigObject.ConfigurationDeploy.sublime-snippet
+  - `znuny.SysConfigObject.ConfigurationNavigationTree.sublime-snippet
+  - `znuny.SysConfigObject.SettingAddItem.sublime-snippet
+  - `znuny.SysConfigObject.SettingEffectiveValueCheck.sublime-snippet
+  - `znuny.SysConfigObject.SettingEffectiveValueGet.sublime-snippet
+  - `znuny.SysConfigObject.SettingReset.sublime-snippet
+  - `znuny.SysConfigObject.SettingUpdate.sublime-snippet
+  - `znuny.SystemDataObject.SystemDataDelete.sublime-snippet
+  - `znuny.SystemDataObject.SystemDataGet.sublime-snippet
+  - `znuny.SystemDataObject.SystemDataUpdate.sublime-snippet
+  - `znuny.TemplateGeneratorObject.GenericAgentArticle.sublime-snippet
+  - `znuny.TemplateGeneratorObject.Sender.sublime-snippet
+  - `znuny.TicketAttributeRelationsObject.GetTicketAttributeRelations.sublime-snippet
+  - `znuny.TypeObject.NameExistsCheck.sublime-snippet
+  - `znuny.ObjectManager.PostMasterObject.sublime-snippet
 
 GitHub link - https://github.com/znuny/Znuny-Sublime
 
